feat(platform): 引入 minimall-api + Feign + PlatformServiceImpl 委托 FeignClient
- platform-service pom 新增 minimall-api 依赖 (传递 spring-cloud-openfeign)
- PlatformApplication 启用 @EnableFeignClients(basePackages = 'com.yirancrazy.minimall.api.feign')
- PlatformMerchantServiceImpl 重写:
  page 委托 MerchantFeignClient.pageManage, 映射 MerchantManageVO -> PlatformMerchantVO
  detail 委托 MerchantFeignClient.detail, data 为 null 时抛 PLATFORM_MERCHANT_NOT_FOUND
- PlatformUserServiceImpl 重写:
  page 委托 UserFeignClient.pageManage, 映射 UserManageVO -> PlatformUserVO
  detail 委托 UserFeignClient.detail, data 为 null 时抛 PLATFORM_USER_NOT_FOUND
- 8 个单测覆盖正常/Feign null data/边界路径